# statistical-rethinking-pymc

./: README.md  pyproject.toml
notes/: 01 - The Golem of Prague.ipynb  02 - The Garden of Forking Data.ipynb  03 - Geocentric Models.ipynb
