[tool.poetry]
name = "statistical-rethinking-pymc"
version = "0.1.0"
description = ""
authors = ["Henry Simmons <henrytdsimmons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pymc = "^5.13.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.13.0"
jupyterlab = "^4.1.6"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
